添加每日推送订阅地址

--- a/src/1-每日学习资料内容简介.md
+++ b/src/1-每日学习资料内容简介.md
@@ -2,7 +2,7 @@
 
 每日学习资料的内容以路线图中的知识点为核心，但为了更好的体验，我们调整了呈现的顺序。
 
-> 另外需要注意，这并不是一个系列课程，我们只进行学习资料的推荐，推荐内容并不代表我们的观点，如果觉得资料有问题或者有更好的资料，欢迎`fork`补充后`PR`回来。
+> 另外需要注意，这并不是一个系列课程，我们只进行学习资料的推荐，推荐内容（尤其是非原创的）并不代表我们的观点，如果觉得资料有问题或者有更好的资料，欢迎`fork`补充后`PR`回来。
 
 ## 零基础
 
@@ -46,3 +46,6 @@
 #### 第四轮
 
 未覆盖的知识点补全、参考阅读和常用资源
+
+---
+目前只完成了第一轮资料的整理。
