--- a/src/11-早期计算机编程方式.md
+++ b/src/11-早期计算机编程方式.md
@@ -1,3 +1,3 @@
 # 早期计算机编程方式
 
-内容精选自 [Crash Course Computer Science](https://www.youtube.com/watch?v=O5nskjZ_GoI) ，请点此移步[Bilibili观看](https://www.bilibili.com/video/BV1EW411u7th?p=10)
+内容精选自 [Crash Course Computer Science](https://thecrashcourse.com/topic/computerscience/) ，请点此移步[Bilibili观看](https://www.bilibili.com/video/BV1EW411u7th?p=10)
