--- a/src/20-文件系统.md
+++ b/src/20-文件系统.md
@@ -1,3 +1,3 @@
 # 文件系统
 
-内容精选自 [Crash Course Computer Science](https://www.youtube.com/watch?v=O5nskjZ_GoI) ，请点此移步[Bilibili观看](https://www.bilibili.com/video/BV1EW411u7th?p=20)
+内容精选自 [Crash Course Computer Science](https://thecrashcourse.com/topic/computerscience/) ，请点此移步[Bilibili观看](https://www.bilibili.com/video/BV1EW411u7th?p=20)
