--- a/src/21-命令行界面.md
+++ b/src/21-命令行界面.md
@@ -1,3 +1,3 @@
 # 命令行界面
 
-内容精选自 [Crash Course Computer Science](https://www.youtube.com/watch?v=O5nskjZ_GoI) ，请点此移步[Bilibili观看](https://www.bilibili.com/video/BV1EW411u7th?p=22)
+内容精选自 [Crash Course Computer Science](https://thecrashcourse.com/topic/computerscience/) ，请点此移步[Bilibili观看](https://www.bilibili.com/video/BV1EW411u7th?p=22)
