--- a/src/4-布尔逻辑与逻辑门.md
+++ b/src/4-布尔逻辑与逻辑门.md
@@ -1,3 +1,3 @@
 # 布尔逻辑与逻辑门
 
-内容精选自 [Crash Course Computer Science](https://www.youtube.com/watch?v=O5nskjZ_GoI) ，请点此移步[Bilibili观看](https://www.bilibili.com/video/BV1EW411u7th?p=3)
+内容精选自 [Crash Course Computer Science](https://thecrashcourse.com/topic/computerscience/) ，请点此移步[Bilibili观看](https://www.bilibili.com/video/BV1EW411u7th?p=3)
