修正面包多地址

--- a/src/37-个人支付解决方案.md
+++ b/src/37-个人支付解决方案.md
@@ -30,7 +30,7 @@
 
 ## 数字内容销售平台
 
-如果我们就是写一个软件，想简单地进行销售获得收入的话，我们还可以使用一些现成的数字内容销售平台。面向国外市场的话，可以使用Gumroad.com；如果面向国内市场的话，可以使用mianbaoduo.com。
+如果我们就是写一个软件，想简单地进行销售获得收入的话，我们还可以使用一些现成的数字内容销售平台。面向国外市场的话，可以使用Gumroad.com；如果面向国内市场的话，可以使用[面包多](https://mbd.pub/)。
 
 ![picture 39](images/4fa2ce0a1d95a2aae0099970b1d580f12e571adf1e68cef076bbdab9d822eded.png)  
 
